@@ -9,7 +9,7 @@ importFrom(GenomicRanges, GRanges)
 importFrom(IRanges, IRanges)
 
 
-export(importFA, blastSeq, getEnsgInfo, getGeneLocation, getGeneSeq, importXML,
+export(importFA, blastSeq, exportFA, getEnsgInfo, getGeneLocation, getGeneSeq, importXML,
        importBlastTab, intersectXMLAnnot,
        subDose, subPhased, subGprobs, targetScan, tableSpecies, species, getAnnotation,
        plotHit, getFastaFromBed)
